--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,27 @@
-# Настройки сервера
+# .env.example - Шаблон переменных окружения.
+# Скопируйте этот файл в .env и заполните своими реальными данными.
+# НЕ ХРАНИТЕ ЗДЕСЬ НАСТОЯЩИЕ ПАРОЛИ И КЛЮЧИ!
+
+# --- Настройки сервера ---
 PORT=3000
-FRONTEND_URL=http://localhost:3000
 
-# Настройки Email (Gmail)
-EMAIL_SERVICE=gmail
-EMAIL_USER=egupovdswork3@gmail.com
-EMAIL_PASS=xfzw vyxp uzeq rkex
-EMAIL_FROM=egupovdswork3@gmail.com
-EMAIL_TO=egupovdswork@gmail.com
+# --- Настройки отправки почты (Gmail SMTP) ---
+# Для работы почты нужны все эти переменные.
+# EMAIL_PASS должен быть 16-значным паролем приложения, сгенерированным в настройках Google-аккаунта.
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=465
+EMAIL_SECURE=true
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your_16_digit_app_password
+EMAIL_RECEIVER=email_where_forms_are_sent@example.com
 
-# Настройки Email (SMTP - альтернатива Gmail)
-# SMTP_HOST=smtp.yourprovider.com
-# SMTP_PORT=587
-# SMTP_SECURE=false
-# EMAIL_USER=your-email@yourprovider.com
-# EMAIL_PASS=your-password
-# EMAIL_FROM=your-email@yourprovider.com
-# EMAIL_TO=admin@yourcompany.com
+# --- Настройки Firebase ---
+# Эти ключи нужно взять из настроек вашего проекта в консоли Firebase.
+# Project Settings > General > Your apps > Web app > SDK setup and configuration
+FIREBASE_API_KEY="your_firebase_api_key_here"
+FIREBASE_AUTH_DOMAIN="your-project-id.firebaseapp.com"
+FIREBASE_PROJECT_ID="your-project-id"
+FIREBASE_STORAGE_BUCKET="your-project-id.appspot.com"
+FIREBASE_MESSAGING_SENDER_ID="your_messaging_sender_id"
+FIREBASE_APP_ID="your_web_app_id"
+FIREBASE_MEASUREMENT_ID="your_measurement_id"
