--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "cost-calculator-form",
+  "name": "red-panda-vue-vite",
+  "private": true,
   "version": "1.0.0",
-  "description": "Форма расчета стоимости с серверной частью",
-  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "type": "commonjs",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "nodemailer": "^6.9.7",
     "dotenv": "^16.3.1",
-    "vue": "^3.4.0",
-    "firebase": "^10.12.3"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
+    "nodemailer": "^6.9.7",
+    "vue": "^3.4.21",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "keywords": [
-    "form",
-    "express",
-    "nodejs",
-    "contact-form"
-  ],
-  "author": "",
-  "license": "ISC"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "nodemon": "^3.0.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
+  }
 }
