--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "nodemon server.js",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "npm run build && node server.js"
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
+    "dotenv": "^16.6.0",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.2.1",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
-    "nodemailer": "^6.9.7",
+    "helmet": "^8.1.0",
+    "nodemailer": "^6.10.1",
     "vue": "^3.4.21",
     "vue-router": "^4.5.1"
   },
