--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "helmet": "^8.1.0",
+    "multer": "^2.0.1",
     "nodemailer": "^6.10.1",
     "vue": "^3.4.21",
     "vue-router": "^4.5.1"
