--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "npm run build && node server.js"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.0",
