--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "helmet": "^8.1.0",
     "multer": "^2.0.1",
     "nodemailer": "^6.10.1",
+    "pinia": "^3.0.3",
     "vue": "^3.4.21",
     "vue-router": "^4.5.1"
   },
