--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "target": "redpanda-main",  
     "public": "dist",
     "ignore": [
       "firebase.json",
