работающие формы вакансий

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ EMAIL_SECURE=true
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your_16_digit_app_password
 EMAIL_RECEIVER=email_where_forms_are_sent@example.com
+EMAIL_HR_RECEIVER=your_hr_email@example.com
 
 # --- Настройки Firebase ---
 # Эти ключи нужно взять из настроек вашего проекта в консоли Firebase.
