--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
-# .env.example - Шаблон переменных окружения.
-# Скопируйте этот файл в .env и заполните своими реальными данными.
-# НЕ ХРАНИТЕ ЗДЕСЬ НАСТОЯЩИЕ ПАРОЛИ И КЛЮЧИ!
+// .env.example - Шаблон переменных окружения.
+// Скопируйте этот файл в .env и заполните своими реальными данными.
+// НЕ ХРАНИТЕ ЗДЕСЬ НАСТОЯЩИЕ ПАРОЛИ И КЛЮЧИ!
 
-# --- Настройки сервера ---
+// --- Настройки сервера ---
 PORT=3000
+// --- ДОБАВЛЕНА НОВАЯ СТРОКА ---
+APP_BASE_URL=https://redpanda.web.app
 
-# --- Настройки отправки почты (Gmail SMTP) ---
-# Для работы почты нужны все эти переменные.
-# EMAIL_PASS должен быть 16-значным паролем приложения, сгенерированным в настройках Google-аккаунта.
+// --- Настройки отправки почты (Gmail SMTP) ---
+// EMAIL_PASS должен быть 16-значным паролем приложения, сгенерированным в настройках Google-аккаунта.
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
 EMAIL_SECURE=true
@@ -23,6 +24,6 @@ FIREBASE_API_KEY="your_firebase_api_key_here"
 FIREBASE_AUTH_DOMAIN="your-project-id.firebaseapp.com"
 FIREBASE_PROJECT_ID="your-project-id"
 FIREBASE_STORAGE_BUCKET="your-project-id.appspot.com"
-FIREBASE_MESSAGING_SENDER_ID="your_messaging_sender_id"
+FIREBASE_MESSAGING_SENDER_ID="your_Messaginger_id"
 FIREBASE_APP_ID="your_web_app_id"
 FIREBASE_MEASUREMENT_ID="your_measurement_id"
