--- a/functions/package.json
+++ b/functions/package.json
@@ -10,17 +10,18 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.6.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
-    "firebase-admin": "^13.4.0",
-    "firebase-functions": "^5.0.1",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^5.1.1",
     "helmet": "^8.1.0",
     "multer": "^2.0.1",
     "nodemailer": "^6.10.1"
