--- a/functions/package.json
+++ b/functions/package.json
@@ -10,21 +10,20 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "20"
+    "node": "18"
   },
   "main": "index.js",
-  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.6.0",
-    "express": "^4.21.2",
-    "express-rate-limit": "^7.5.1",
-    "express-validator": "^7.2.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^5.1.1",
-    "helmet": "^8.1.0",
-    "multer": "^2.0.1",
-    "nodemailer": "^6.10.1"
+    "firebase-functions": "^4.5.0",
+    "helmet": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
