--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "server": "nodemon server.js",
     "build": "vite build",
-    "preview": "npm run build && node server.js"
+    "preview": "npm run build && node server.js",
+    "lint": "eslint . --ext .vue,.js,.cjs --fix",
+    "format": "prettier --write \"**/*.{vue,js,cjs,json,html,css,scss}\"",
+    "test": "vitest"
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
@@ -29,10 +32,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.19",
     "nodemon": "^3.0.2",
     "postcss": "^8.4.38",
+    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^3.2.4"
   }
 }
