--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,20 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^13.4.0",
-    "firebase-functions": "^6.4.0"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
+    "express-validator": "^7.1.0",
+    "firebase-admin": "^12.1.1",
+    "firebase-functions": "^6.4.0",
+    "helmet": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
+    "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.3.0"
   },
   "private": true
 }
