--- a/functions/package.json
+++ b/functions/package.json
@@ -22,7 +22,8 @@
     "firebase-functions": "^6.4.0",
     "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "busboy": "^1.6.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
