--- a/package.json
+++ b/package.json
@@ -7,26 +7,31 @@
     "dev": "vite",
     "server": "nodemon server.js",
     "build": "vite build",
-    "preview": "npm run build && node server.js",
+    "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.cjs --fix",
     "format": "prettier --write \"**/*.{vue,js,cjs,json,html,css,scss}\"",
     "test": "vitest"
   },
   "dependencies": {
+    "@eslint/js": "^9.32.0",
     "@studio-freight/lenis": "^1.0.42",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-vue": "^10.3.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
+    "globals": "^16.3.0",
     "helmet": "^8.1.0",
     "multer": "^2.0.1",
     "nodemailer": "^6.10.1",
     "pinia": "^3.0.3",
     "vue": "^3.4.21",
+    "vue-eslint-parser": "^10.2.0",
     "vue-i18n": "^11.1.10",
     "vue-router": "^4.5.1"
   },
