--- a/functions/package.json
+++ b/functions/package.json
@@ -14,29 +14,17 @@
   },
   "main": "index.js",
   "dependencies": {
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
+    "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "express-validator": "^7.1.0",
-    "firebase-admin": "^12.1.1",
+    "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.4.0",
     "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.13",
-    "busboy": "^1.6.0"
-=======
-=======
->>>>>>> Stashed changes
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^4.5.0",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.13"
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
   },
   "devDependencies": {
     "eslint": "^8.57.0",
